Fix letter spacing in the main title. Fix heights in contact list paragraps.

--- a/css/style.scss
+++ b/css/style.scss
@@ -125,8 +125,8 @@ ul.select-lang {
 	h1 {
 		margin-top: 116px;
 		text-transform: uppercase;
-		font-size: 32px;
-		letter-spacing: 8px;
+		font-size: 2em;
+		letter-spacing: 0.203125em;
 		font-weight: bold;
 	}
 
@@ -261,7 +261,7 @@ footer {
 				font-size: 18px;
 				font-weight: bold;
 				letter-spacing: 2px;
-				margin-bottom: 17px;
+				margin-bottom: 16px;
 			}
 
 			p {
@@ -289,7 +289,7 @@ footer {
 	}
 
 	.copyright {
-		margin-top: 35px;
+		margin-top: 40px;
 		margin-bottom: 15px;
 		text-align: center;
 		text-transform: uppercase;
